--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
         run: |
           heroku container:push web -a $HEROKU_APP_NAME
           heroku container:release web -a $HEROKU_APP_NAME
-          heroku container:logs --tail -a $HEROKU_APP_NAME
+          heroku container:logs --t $HEROKU_APP_NAME
